<resources>
    <string name="app_name">Youkas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jenis_catatan">Jenis Catatan</string>
    <string name="nominal">Nominal</string>
    <string name="simpan">Simpan</string>
    <string name="keterangan">Keterangan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_catatan">Judul Catatan</string>
    <string name="bagikan">Bagikan</string>
    <string name="tv">TextView</string>
    <string name="bagikan_template">Nama Lengkap: %1$s\nJenis Catatan: %2$s\nNominal: %3$s\nKeterangan: %4$s</string>
    <string name="detail_catatan">Detail Catatan</string>
    <string name="tambah_catatan">Tambah Catatan</string>
    <string name="hapus_histori">Hapus History</string>
    <string name="konfirmasi_hapus">Apakah anda ingin menghapus catatan?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="about">
Youkas adalah sebuah aplikasi yang dirancang untuk membantu pencatatan pengeluaran dan pemasukan dalam suatu organisasi.\nAplikasi Youkas menyediakan fitur pencatatan yang sederhana, memungkinkan Anda untuk mencatat setiap transaksi dengan mudah. Anda dapat memasukkan, melihat, dan menghapus detail pengeluaran dan pemasukan.</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="select">Pilih Jenis Catatan</string>
    <string name="news">News</string>
    <string name="judul_article">Judul Artikel</string>
    <string name="network_error">Network Error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update berita terbaru</string>
    <string name="notif_title">Ada Berita baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>